traces/bug_141.txt
examples++-load/gmsh.cpp:378: error: DEAD_STORE
  The value written to &num (type int) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:378:3: Write of unused value
376.   		if(fread(data, sizeof(int), n, fp) != n) exit(1);
377.   		if(swap) SwapBytes((char*)data, sizeof(int), n);
378.   		int num = data[0];
         ^
379.   		int physical = (numTags > 0) ? data[4 - numTags] : 0;
380.   		int elementary = (numTags > 1) ? data[4 - numTags + 1] : 0;
